--- a/style.css
+++ b/style.css
@@ -1,64 +1,130 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,500;1,100&display=swap');
-</style>
-
 *{
+
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
 }
 
+html,
 body{
-    width: 100%;
-    height: 100vh;
+  line-height: 1.4;
+  font-weight: 300;
+  font-family: 'Roboto', sans-serif;
+}
+.hero_section{
+    background-image: url(image/html.dev.jpg);
+    min-height: 100vh;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.text_container{
+    color: white;
+    max-width: 900px;
+    margin: 0 auto;
+    padding-top: 64px;
+    padding-left: 16px;
+}
+.lg_text{
+    font-size: 72px;
+    font-weight: 400;
+}
+.blue_box{
+ background-color: #000 ;
+ padding: 20px;
+
+}
+.blue_box h2{
+
+    font-size: 72px;
+    color: white;
+    text-align: center;
+    font-weight: 300;
+}
+.blue_box h2 span{
+    font-weight: 400;
+    font-size: 96px;
+}
+
+.work{
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    max-width: 1100px;
+    margin: 50px auto;
+    padding-right: 1100px;
+}
+
+
+.card-container{
     display: flex;
     justify-content: center;
-    align-items: center;
-    background: linear-gradient(45deg,#0a0a0a, #3a4452);
+    flex-wrap: wrap;
+    margin-top: 80px;
 
 }
-
-.calculator{
-    border: 1px solid #717377;
-    padding: 20px;
-    border-radius: 16px;
-    background: transparent;
-    box-shadow:  0px 3px 15px rhba(113, 115, 119, 0.5);
-
+.card{
+    flex-direction: row;
 }
-
-input{
-    width: 320px;
-    border: none;
-    padding: 24px;
+.card{
+    width: 325px;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     margin: 10px;
-    background: transparent;
-    box-shadow: 0px 3px 15px rgbs(84, 84, 84,0.1);
-    font-size: 40px;
-    text-align: right;
-    cursor: pointer;
+    
+
+}
+.card img{
+    width: 100%;
+    height: auto;
+}
+.card-content{
+    padding: 16px;
+
+}
+.card-content h3{
+    font-size: 28px;
+    margin-bottom: 8px;
+}
+.card-content p{
+    color: #666;
+    font-size: 15px;
+    line-height: 1.3;
+}
+.bottom_section{
+   display: flex;
+
+}
+.contact{
+    background-color: #515603;
+
+}
+.about{
+    background-color: #722300;
+}
+.contact,
+.about{
+    flex: 1;
+    min-height: 300px;
+    padding: 32px;
     color: white;
 }
-input::placeholder{
-    color:#ffffff
+.about h2,
+.contact h2{
+    font-size: 64px;
+    font-weight: 300;
 }
-button{
-    border: none;
-    width: 60px;
-    height: 60px;
-    margin: 10px;
-    border-radius: 50%;
-    background: transparent;
-    color: #ffffff;
-    font-size: 20px;
-    box-shadow: -8px -8px 15px rgba(255, 255,255,0.1);
-    cursor: pointer;
-
+.about p,
+.contact p{
+    margin-bottom: 20px;
 }
-
-.equalBtn{
-    background-color: #fb7c14;
-}
-.operator{
-    color: #6dee06;
+footer{
+    text-align: center;
+    text-transform: uppercase;
+    background-color: #000;
+    padding: 20px;
+    color: #f0f0f0;
 }
